--- a/roles/readeck/defaults/main.yml
+++ b/roles/readeck/defaults/main.yml
@@ -5,6 +5,21 @@ readeck_available_externally: false
 # directories
 readeck_data_directory: "{{ docker_home }}/readeck"
 
+# config
+# readeck_log_level:
+# readeck_secret_key:
+# readeck_allowed_hosts:
+# readeck_database_source:
+# readeck_email_host:
+# readeck_email_port:
+# readeck_email_username:
+# readeck_email_password:
+# readeck_email_insecure:
+# readeck_email_encryption:
+# readeck_email_from:
+# readeck_email_noreply:
+# readeck_public_share_ttl:
+
 # network
 readeck_port: "8005"
 readeck_hostname: "readeck"
