--- a/roles/readeck/tasks/main.yml
+++ b/roles/readeck/tasks/main.yml
@@ -1,21 +1,43 @@
 ---
-- name: Start Readneck
+- name: Start Readeck
   block:
-    - name: Create Readneck Directories
+    - name: Create Readeck Directories
       ansible.builtin.file:
         path: "{{ item }}"
         state: directory
       with_items:
         - "{{ readeck_data_directory }}"
 
-    - name: Create Readneck Docker Container
+    - name: Create Readeck Docker Container
       community.docker.docker_container:
         container_default_behavior: no_defaults
         name: "{{ readeck_container_name }}"
         image: "{{ readeck_image_name }}:{{ readeck_image_version }}"
         pull: true
+        env:
+          READECK_LOG_LEVEL: "{{ readeck_log_level | default(omit) }}"
+          READECK_SECRET_KEY: "{{ readeck_secret_key | default(omit) }}"
+          READECK_TRUSTED_PROXIES: "127.0.0.1"
+          READECK_ALLOWED_HOSTS: "{{ readeck_allowed_hosts | join(',') | default(omit) }}"
+          READECK_DATABASE_SOURCE: "{{ readeck_database_source | default(omit) }}"
+          READECK_MAIL_HOST: "{{ readeck_email_host | default(omit) }}"
+          READECK_MAIL_PORT: "{{ readeck_email_port | default(omit) }}"
+          READECK_MAIL_USERNAME: "{{ readeck_email_username | default(omit) }}"
+          READECK_MAIL_PASSWORD: "{{ readeck_email_password | default(omit) }}"
+          READECK_MAIL_INSECURE: "{{ readeck_email_insecure | string | default(omit) }}"
+          READECK_MAIL_ENCRYPTION: "{{ readeck_email_encryption | default(omit) }}"
+          READECK_MAIL_FROM: "{{ readeck_email_from | default(omit) }}"
+          READECK_MAIL_FROMNOREPLY: "{{ readeck_email_noreply | default(omit) }}"
+          READECK_PUBLIC_SHARE_TTL: "{{ readeck_public_share_ttl | default(omit) }}"
         ports:
           - "{{ readeck_port }}:8000"
+        volumes:
+          - "{{ readeck_data_directory }}:/readeck"
+        healthcheck:
+          test: ["CMD", "/bin/readeck", "healthcheck", "-config", "config.toml"]
+          interval: 30s
+          timeout: 2s
+          retries: 3
         restart_policy: unless-stopped
         memory: "{{ readeck_memory }}"
         labels:
@@ -27,9 +49,9 @@
           traefik.http.services.readeck.loadbalancer.server.port: "8000"
   when: readeck_enabled is true
 
-- name: Stop Readneck
+- name: Stop Readeck
   block:
-    - name: Stop Readneck
+    - name: Stop Readeck
       community.docker.docker_container:
         name: "{{ readeck_container_name }}"
         state: absent
