Add role for FoundryVTT
Signed-off-by: Webster Mudge <wmudge@gmail.com>

--- a/nas.yml
+++ b/nas.yml
@@ -160,6 +160,8 @@
       tags: [formbricks]
     - role: formio
       tags: [formio]
+    - role: foundryvtt
+      tags: [foundryvtt]
     - role: freshrss
       tags: [freshrss]
     - role: frigate
