--- a/roles/pocketid/tasks/main.yml
+++ b/roles/pocketid/tasks/main.yml
@@ -16,11 +16,16 @@
         image: "{{ pocketid_image_name }}:{{ pocketid_image_version }}"
         pull: true
         volumes:
-          - "{{ pocketid_data_directory }}/data:/app/backend/data"
+          - "{{ pocketid_data_directory }}/data:/app/data"
         ports:
           - "{{ pocketid_port }}:80"
         env:
-          PUBLIC_APP_URL: "{{ pocketid_public_app_url }}"
+          APP_URL: "{{ pocketid_app_url }}"
+          ENCRYPTION_KEY: "{{ pocketid_encryption_key }}"
+          TRUST_PROXY: "{{ pocketid_trust_proxy }}"
+          MAXMIND_LICENSE_KEY: "{{ pocketid_maxmind_license_key }}"
+          PUID: "{{ pocketid_puid }}"
+          GUID: "{{ pocketid_guid }}"
         restart_policy: unless-stopped
         memory: "{{ pocketid_memory }}"
         labels:
@@ -30,6 +35,12 @@
           traefik.http.routers.pocketid.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.pocketid.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.pocketid.loadbalancer.server.port: "80"
+        healthcheck:
+          test: ["CMD", "/app/pocket-id", "healthcheck"]
+          interval: 1m30s
+          timeout: 5s
+          retries: 2
+          start_period: 10s
   when: pocketid_enabled is true
 
 - name: Stop Pocket-ID
