Update homepage configuration and tasks

--- a/roles/homepage/tasks/main.yml
+++ b/roles/homepage/tasks/main.yml
@@ -5,14 +5,15 @@
       ansible.builtin.file:
         path: "{{ item }}"
         state: directory
-      with_items:
+        mode: "0755"
+      loop:
         - "{{ homepage_data_directory }}"
 
     - name: Template config files
       ansible.builtin.template:
         src: "{{ item }}"
         dest: "{{ homepage_data_directory }}/{{ item }}"
-      with_items:
+      loop:
         - bookmarks.yaml
         - docker.yaml
         - settings.yaml
@@ -36,7 +37,6 @@
         restart_policy: unless-stopped
         restart: "{{ homepage_config is changed }}"
         memory: "{{ homepage_memory }}"
-        network_mode: "host"
         labels:
           traefik.enable: "{{ homepage_available_externally | string }}"
           traefik.http.routers.homepage.rule: "Host(`{{ homepage_hostname }}.{{ ansible_nas_domain }}`)"
