--- a/roles/homepage/defaults/main.yml
+++ b/roles/homepage/defaults/main.yml
@@ -33,8 +33,8 @@ homepage_services_yaml:
   - Networking:
       - Router:
           icon: asus-router
-          href: http://192.168.1.1/
-          description: Asus Router
+          href: http://192.168.0.1/
+          description: Unifi
 
 homepage_widgets_yaml:
   - search:
