--- a/roles/beszel/tasks/main.yml
+++ b/roles/beszel/tasks/main.yml
@@ -39,9 +39,8 @@
         image: "{{ beszel_agent_image_name }}:{{ beszel_image_version }}"
         hostname: "{{ ansible_nas_hostname }}.{{ ansible_nas_domain }}"
         network_mode: host
-        state: started
-        pull: true
         volumes:
+          - ./beszel_agent_data:/var/lib/beszel-agent
           - ./beszel_socket:/beszel_socket
           - /var/run/docker.sock:/var/run/docker.sock:ro
         restart_policy: unless-stopped
