--- a/roles/transmission-with-openvpn/tasks/main.yml
+++ b/roles/transmission-with-openvpn/tasks/main.yml
@@ -63,6 +63,8 @@
           homepage.icon: transmission
           homepage.href: "https://{{transmission_openvpn_hostname}}.{{ ansible_nas_domain }}/transmission/web/"
           homepage.description: Torrent client
+          homepage.widget.type: transmission
+          homepage.widget.url: "http://{{ ansible_nas_hostname }}:{{ transmission_openvpn_webui_port }}"
 
   when: transmission_with_openvpn_enabled is true
 
