--- a/roles/homepage/tasks/main.yml
+++ b/roles/homepage/tasks/main.yml
@@ -25,7 +25,6 @@
       community.docker.docker_container:
         name: "{{ homepage_container_name }}"
         image: "{{ homepage_image_name }}:{{ homepage_image_tag }}"
-        pull: true
         volumes:
           - "{{ homepage_data_directory }}:/app/config"
           - "/var/run/docker.sock:/var/run/docker.sock"
@@ -37,6 +36,7 @@
         restart_policy: unless-stopped
         restart: "{{ homepage_config is changed }}"
         memory: "{{ homepage_memory }}"
+        network_mode: "host"
         labels:
           traefik.enable: "{{ homepage_available_externally | string }}"
           traefik.http.routers.homepage.rule: "Host(`{{ homepage_hostname }}.{{ ansible_nas_domain }}`)"
