--- a/roles/libretranslate/tasks/main.yml
+++ b/roles/libretranslate/tasks/main.yml
@@ -46,6 +46,11 @@
           traefik.http.routers.libretranslate.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.libretranslate.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.libretranslate.loadbalancer.server.port: "5000"
+          homepage.group: Applications
+          homepage.name: Libretranslate
+          homepage.icon: libretranslate
+          homepage.href: "https://{{ libretranslate_hostname }}.{{ ansible_nas_domain }}"
+          homepage.description: Translations
         healthcheck:
           test: ['CMD-SHELL', './venv/bin/python scripts/healthcheck.py']
   when: libretranslate_enabled is true
