--- a/roles/arcane/tasks/main.yml
+++ b/roles/arcane/tasks/main.yml
@@ -35,7 +35,7 @@
           traefik.http.routers.arcane.tls.domains[0].main: '{{ ansible_nas_domain }}'
           traefik.http.routers.arcane.tls.domains[0].sans: '*.{{ ansible_nas_domain }}'
           traefik.http.services.arcane.loadbalancer.server.port: '3552'
-          homepage.group: System
+          homepage.group: Monitoring
           homepage.name: Arcane
           homepage.icon: arcane
           homepage.href: "https://{{ arcane_hostname }}.{{ ansible_nas_domain }}"
