--- a/roles/atmoz/tasks/main.yml
+++ b/roles/atmoz/tasks/main.yml
@@ -25,7 +25,7 @@
         restart_policy: unless-stopped
         memory: "{{ atmoz_memory }}"
         labels:
-          homepage.group: System
+          homepage.group: Networking
           homepage.name: atmoz
           homepage.icon: atmoz
           homepage.description: Sftp Server
