--- a/roles/ftp_server/tasks/main.yml
+++ b/roles/ftp_server/tasks/main.yml
@@ -26,7 +26,7 @@
         restart_policy: unless-stopped
         memory: "{{ ftp_server_memory }}"
         labels:
-          homepage.group: System
+          homepage.group: Networking
           homepage.name: FTP Server
           homepage.icon: ftp
           homepage.href: "ftp://{{ ftp_server_hostname }}.{{ ansible_nas_domain }}:{{ ftp_server_port }}"
