--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -39,7 +39,7 @@
         restart_policy: unless-stopped
         memory: '{{ traefik_memory }}'
         labels:
-          homepage.group: System
+          homepage.group: Networking
           homepage.name: Traefik
           homepage.icon: traefik
           homepage.href: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{traefik_port_ui }}"
