--- a/roles/netalertx/tasks/main.yml
+++ b/roles/netalertx/tasks/main.yml
@@ -8,7 +8,6 @@
         mode: "0755"
       with_items:
         - "{{ netalertx_data_directory }}"
-        - "{{ netalertx_data_directory }}/config"
         - "{{ netalertx_data_directory }}/db"
 
     - name: Create NetAlertX Docker Container
@@ -17,12 +16,25 @@
         image: "{{ netalertx_image_name }}:{{ netalertx_image_version }}"
         pull: true
         network_mode: host
+        cap_drop:
+          - ALL
+        capabilities:
+          - CHOWN
+          - SETGID
+          - SETUID
+          - NET_ADMIN
+          - NET_BIND_SERVICE
+          - NET_RAW
         volumes:
-          - "{{ netalertx_data_directory }}/config:/app/config"
-          - "{{ netalertx_data_directory }}/db:/app/db"
+          - "{{ netalertx_data_directory }}:/data"
+          - /etc/localtime:/etc/localtime:ro
+        tmpfs:
+          - "/tmp:uid={{ netalertx_uid }},gid={{ netalertx_gid }},mode=1700,noexec,nosuid,nodev"
         env:
-          TZ: "{{ netalertx_timezone }}"
+          TZ: "{{ ansible_nas_timezone }}"
           PORT: "{{ netalertx_port }}"
+          NETALERTX_UID: "{{ netalertx_uid }}"
+          NETALERTX_GID: "{{ netalertx_gid }}"
         restart_policy: unless-stopped
         memory: "{{ netalertx_memory }}"
         labels:
@@ -32,7 +44,7 @@
           traefik.http.routers.netalertx.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.netalertx.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.netalertx.loadbalancer.server.port: "{{ netalertx_port }}"
-          homepage.group: System
+          homepage.group: Monitoring
           homepage.name: NetAlertX
           homepage.icon: netalertx.png
           homepage.href: "http://{{ ansible_nas_hostname }}:{{ netalertx_port }}"
