--- a/roles/searxng/tasks/main.yml
+++ b/roles/searxng/tasks/main.yml
@@ -75,7 +75,7 @@
           traefik.http.routers.searxng.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.searxng.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.searxng.loadbalancer.server.port: "8080"
-          homepage.group: System
+          homepage.group: Applications
           homepage.name: SearxNG
           homepage.icon: searxng.png
           homepage.description: "Free internet metasearch engine"
